--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,7 @@
 name: Deploy to GitHub Pages
 
 on:
+  workflow_dispatch: # Ermöglicht das manuelle Ausführen des Workflows
   push:
     branches:
       - main
